force-app/main/default/objects/Friday1__c/Friday1__c.object-meta.xml
<CustomObject>
    <label>Friday1</label>
    <nameField>
        <label>Friday1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Friday1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>