force-app/main/default/objects/Friday1__c/fields/Friday11__c.field-meta.xml
<CustomField>
    <fullName>Friday11__c</fullName>
    <label>Friday Testing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>