force-app/main/default/objects/Friday1__c/fields/Friday12__c.field-meta.xml
<CustomField>
    <fullName>Friday12__c</fullName>
    <label>Friday12</label>
    <length>100</length>
    <type>Text</type>
</CustomField>