force-app/main/default/objects/Friday1__c/fields/Friday13__c.field-meta.xml
<CustomField>
    <fullName>Friday13__c</fullName>
    <label>Friday13</label>
    <length>100</length>
    <type>Text</type>
</CustomField>